# inspector

./: .travis.yml  Cargo.toml  README.md  publish.sh
cli/: Cargo.toml
cli/examples/: interactive.rs
cli/src/: console.rs  history.rs  lib.rs
core/: Cargo.toml
core/src/: arrayvec.rs  float.rs  lib.rs  std_impls.rs  uuid.rs
macros/: Cargo.toml
macros/src/: lib.rs
parse_pest/: Cargo.toml
parse_pest/src/: lib.rs  query.pest
query/: Cargo.toml
query/src/: lib.rs  std_fns.rs
src/: lib.rs  main.rs  query.rs
src/query/: mod.rs  parser.rs
tests/: accessors.rs  composite_keys.rs  custom_impl.rs  derive_test.rs  explicit_key_access.rs  simple_queries.rs  skip.rs  values_transparent.rs  variables.rs
