[package]
name = "clouseau"
version = "0.1.0"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"

[workspace]
members = ["core", "macros", "parse_pest", "query"]

[features]
default = ["parser_pest", "derive"]
parser_pest = ["clouseau_pest"]
derive = ["clouseau_macros"]
arrayvec = ["clouseau_core/arrayvec"]

[dependencies]
clouseau_core = { path = "core" }
clouseau_macros = { path = "macros", optional = true }
clouseau_pest = { path = "parse_pest", optional = true }
clouseau_query = { path = "query" }
thiserror = "1"
velcro = "0.5"
