[package]
name = "clouseau"
version = "0.2.5"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A query language for inspecting Rust data structures at runtime"

[workspace]
members = ["core", "macros", "parse_pest", "query"]

[features]
default = ["parser_pest", "derive", "query"]
parser_pest = ["clouseau_pest"]
derive = ["clouseau_macros"]
query = ["clouseau_query"]
arrayvec = ["clouseau_core/arrayvec"]
uuid = ["clouseau_core/uuid"]

[dependencies]
clouseau_core = { path = "core", version = "0.2.5" }
clouseau_macros = { path = "macros", optional = true, version = "0.2.5" }
clouseau_pest = { path = "parse_pest", optional = true, version = "0.2.5" }
clouseau_query = { path = "query", optional = true, version = "0.2.5" }
thiserror = "1"

[dev-dependencies]
velcro = "0.5"
