[package]
name = "clouseau_cli"
version = "0.3.2"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Interactive CLI lib for clouseau queries"

[dependencies]
clouseau_core = { path = "../core", version = "0.3.2" }
clouseau_query = { path = "../query", version = "0.3.2" }
clouseau_pest = { path = "../parse_pest", version = "0.3.2" }
itertools = "0.10"
termion = "1.5"

[dev-dependencies]
clouseau = { path = "..", version = "0.3.2" }
velcro = "0.5"
