[package]
name = "clouseau_core"
version = "0.3.0"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Internal dependency of clouseau"

[dependencies]
arrayvec = { version = "0.5", optional = true }
thiserror = "1"
uuid = { version = "0.8", optional = true }
