[package]
name = "clouseau_macros"
version = "0.2.5"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Internal dependency of clouseau"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["derive", "printing"] }
quote = "1"
