[package]
name = "clouseau_pest"
version = "0.1.0"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Internal dependency of clouseau"

[dependencies]
pest = "2.1"    
pest_derive = "2.1"
reflection = "0.1.3"
thiserror = "1"
velcro = "0.5"
clouseau_core = { path = "../core", version = "0.1.0" }
clouseau_query = { path = "../query", version = "0.1.0" }
