[package]
name = "clouseau_pest"
version = "0.3.3"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Internal dependency of clouseau"

[dependencies]
pest = "2.1"    
pest_derive = "2.1"
thiserror = "1"
clouseau_core = { path = "../core", version = "0.3.3" }
clouseau_query = { path = "../query", version = "0.3.3" }

[dev-dependencies]
velcro = "0.5"
